src/objects/c2g__InquiryTemplateColumnFormula__c.object
<CustomObject>
    <description>Stores the formula associated with a column on an inquiry template.</description>
    <fields>
        <fullName>c2g__ClosingBrackets__c</fullName>
        <label>Closing Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InquiryTemplateColumn__c</fullName>
        <label>Inquiry Template Column</label>
        <referenceTo>c2g__InquiryTemplateColumn__c</referenceTo>
        <relationshipLabel>Formula</relationshipLabel>
        <relationshipName>Formula</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__LiteralValue__c</fullName>
        <label>Literal Value</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OpeningBrackets__c</fullName>
        <label>Opening Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>/</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__SourceColumn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Column</label>
        <referenceTo>c2g__InquiryTemplateColumn__c</referenceTo>
        <relationshipLabel>Column Formulas</relationshipLabel>
        <relationshipName>ColumnFormulas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Field</label>
        <referenceTo>c2g__DataViewField__c</referenceTo>
        <relationshipLabel>Field Formulas</relationshipLabel>
        <relationshipName>FieldFormulas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inquiry Template Column Formula</label>
    <nameField>
        <displayFormat>ITCF-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Template Column Formulas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>